Fix broken merge encoding detection

BUG:493597
FIXED-IN:1.11.5